--- a/.env.development
+++ b/.env.development
@@ -3,3 +3,4 @@ POSTGRES_HOST=localhost
 POSTGRES_DB=localdb
 POSTGRES_PASSWORD=localpassword
 POSTGRES_PORT=5432
+DATABASE_URL=postgres://localuser:localpassword@localhost:5432/localdb
