--- a/package.json
+++ b/package.json
@@ -19,12 +19,17 @@
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
     "test": "jest",
-    "test:watch": "jest --watchAll"
+    "test:watch": "jest --watchAll",
+    "migrations": "node-pg-migrate --migrations-dir infra/migrations --envPath .env.development",
+    "migrations:create": "npm run migrations create",
+    "migrations:up": "npm run migrations up"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.4.4",
     "next": "^13.1.6",
+    "node-pg-migrate": "^6.2.2",
     "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
