--- a/.env.development
+++ b/.env.development
@@ -4,3 +4,5 @@ POSTGRES_DB=localdb
 POSTGRES_PASSWORD=localpassword
 POSTGRES_PORT=5432
 DATABASE_URL=postgres://$POSTGRES_USER:$POSTGRES_PASSWORD@$POSTGRES_HOST:$POSTGRES_PORT/$POSTGRES_DB
+
+WEBSERVER_URL=http://localhost:3000
