--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: "lts-hydrogen"
+          node-version: "18.14.2"
       # run: "roda" um comando diretamente na instancia da maquina do job
       - run: npm ci
       - run: npm test
