--- a/infra/compose.yaml
+++ b/infra/compose.yaml
@@ -1,8 +1,8 @@
 services:
   database:
-    container_name: 'local-database-postgres'
-    image: 'postgres:16.0-alpine3.18'
+    container_name: "local-database-postgres"
+    image: "postgres:16.0-alpine3.18"
     env_file:
-      - '../.env.development'
+      - "../.env.development"
     ports:
-      - '5432:5432'
+      - "5432:5432"
