--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -27,3 +27,17 @@ jobs:
       # run: "roda" um comando diretamente na instancia da maquina do job
       - run: npm ci
       - run: npm run lint:eslint:check
+  commitlint:
+    name: Commitlint
+    runs-on: ubuntu-latest
+    steps:
+      # uses: "usa" uma action já existente
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "18.14.2"
+      # run: "roda" um comando diretamente na instancia da maquina do job
+      - run: npm ci
+      - run: npx commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
