--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "migrations:create": "npm run migrations create",
     "migrations:up": "npm run migrations up",
     "scripts:check-postgres-is-ready": "node infra/scripts/check-postgres-is-ready.js",
-    "scripts:sleep": "node infra/scripts/sleep.js"
+    "scripts:sleep": "node infra/scripts/sleep.js",
+    "prepare": "husky"
   },
   "author": "",
   "license": "MIT",
@@ -47,6 +48,7 @@
     "eslint-config-next": "14.2.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest": "^28.6.0",
+    "husky": "^9.1.4",
     "jest": "^29.6.2",
     "prettier": "^3.6.2"
   }
