--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "migrations:up": "npm run migrations up",
     "scripts:check-postgres-is-ready": "node infra/scripts/check-postgres-is-ready.js",
     "scripts:sleep": "node infra/scripts/sleep.js",
-    "prepare": "husky"
+    "prepare": "husky",
+    "commit": "cz"
   },
   "author": "",
   "license": "MIT",
@@ -43,7 +44,9 @@
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "async-retry": "^1.3.3",
+    "commitizen": "^4.3.0",
     "concurrently": "^8.2.2",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.4",
     "eslint-config-prettier": "^9.1.0",
@@ -51,5 +54,10 @@
     "husky": "^9.1.4",
     "jest": "^29.6.2",
     "prettier": "^3.6.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
