--- a/package.json
+++ b/package.json
@@ -11,21 +11,23 @@
     }
   ],
   "scripts": {
-    "dev": "npm run services:up && npm run scripts:check-postgres-is-ready && npm run migrations:up && next dev",
+    "dev": "npm run scripts:run-dev",
+    "test": "npm run services:up && concurrently -n next,jest --hide next -k -s command-jest \"next dev\" \"jest --runInBand --verbose\"",
+    "posttest": "npm run services:down",
+    "test:watch": "jest --watchAll --runInBand",
     "services": "docker compose -f infra/compose.yaml",
     "services:up": "npm run services up -- -d",
     "services:stop": "npm run services stop",
     "services:down": "npm run services down",
-    "lint:prettier:check": "prettier --check .",
-    "lint:prettier:fix": "prettier --write .",
-    "lint:eslint:check": "next lint --dir .",
-    "test": "npm run services:up && concurrently -n next,jest --hide next -k -s command-jest \"next dev\" \"jest --runInBand --verbose\"",
-    "test:watch": "jest --watchAll --runInBand",
     "migrations": "node-pg-migrate --migrations-dir infra/migrations --envPath .env.development",
     "migrations:create": "npm run migrations create",
     "migrations:up": "npm run migrations up",
     "scripts:check-postgres-is-ready": "node infra/scripts/check-postgres-is-ready.js",
+    "scripts:run-dev": "node infra/scripts/run-dev.js",
     "scripts:sleep": "node infra/scripts/sleep.js",
+    "lint:prettier:check": "prettier --check .",
+    "lint:prettier:fix": "prettier --write .",
+    "lint:eslint:check": "next lint --dir .",
     "prepare": "husky",
     "commit": "cz"
   },
