--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "eslint-plugin-jest": "28.8.0",
     "husky": "9.1.7",
     "jest": "29.7.0",
-    "prettier": "3.7.4"
+    "prettier": "3.7.4",
+    "swr": "2.2.5"
   },
   "config": {
     "commitizen": {
