--- a/.env.development
+++ b/.env.development
@@ -5,4 +5,12 @@ POSTGRES_PASSWORD=localpassword
 POSTGRES_PORT=5432
 DATABASE_URL=postgres://$POSTGRES_USER:$POSTGRES_PASSWORD@$POSTGRES_HOST:$POSTGRES_PORT/$POSTGRES_DB
 
+EMAIL_SMTP_HOST=localhost
+EMAIL_SMTP_PORT=1025
+EMAIL_SMTP_USER=
+EMAIL_SMTP_PASS=
+
+EMAIL_HTTP_HOST=localhost
+EMAIL_HTTP_PORT=1080
+
 WEBSERVER_URL=http://localhost:3000
